# yhack-2026

./: .gitignore  AGENTS.md  AUTH0_SETUP.md  AUTH0_SUPABASE_MIGRATION.md  MIGRATION_QUICK_REFERENCE.md  README  README.md  SETUP_CHECKLIST.md  package-lock.json  pdfstates.txt  senators.csv  states.txt  test-integration.sh  validate-migration.sh
backend/: .dockerignore  .envrc  .gitignore  Dockerfile  Dockerfile.prod  env.example  main.py  pyproject.toml  states.py
backend/app/: .gitignore  algorithm.py  auth.py  bills.json  legiscan.py  main.py  senators.csv  supabase_rls.py
backend/app/routers/: bills.py  users.py  votes.py
backend/scripts/: generate_summaries.py
backend/sql/: demo_items.sql
backend/supabase/migrations/: 001_create_bills.sql  002_add_elo_and_party.sql  003_add_party_to_bills.sql  004_drop_parties_table.sql  005_create_users.sql  006_users_rls.sql  007_add_user_bias.sql  009_add_user_state.sql  010_fix_users_table.sql  011_add_update_bill_elo_rpc.sql  012_recreate_users_table.sql  013_bill_elo_float.sql  014_add_pdf_url_to_bills.sql  015_add_get_match_users_rpc.sql  016_match_users_same_state.sql  017_add_avatar_url_to_users.sql  018_avatars_storage_bucket.sql
frontend/: .dockerignore  Dockerfile  build.sh  env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: DemoItems.tsx  layout.tsx  page.tsx
frontend/app/components/: FaxSidebar.tsx  HorizontalAdRail.tsx  LogoutButton.tsx  Navbar.tsx  (+3 more)
frontend/components/: BillCard.tsx  BillDetailModal.tsx  BillSwipeDeck.tsx
frontend/styles/: globals.css
(+11 files in other folders)
