[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=6.0.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.0.0",
    "pdfplumber>=0.11.0",
    "supabase>=2.0.0",
    "PyJWT[crypto]>=2.0.0",
]
